examples/datalog/21_query_features/30_subquery_pattern.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_subquery
Knowledge graph 'test_subquery' created.
Switched to knowledge graph: test_subquery
> .kg use test_subquery
Switched to knowledge graph: test_subquery
> +orders[(1, "Alice", 100), (2, "Bob", 200), (3, "Carol", 150)].
Inserted 3 fact(s) into 'orders'.
> max_order(<MAX:Val>) :- orders(_, _, Val).
Script error: Parse error: Unknown aggregate function: 
